# ds-search-service

./: .gitignore  .pre-commit-config.yaml  README.md
api/: openapi.yaml  openapi_generated.yaml
client/: README.md  pyproject.toml
docs/: index.html
helm-charts/: ds-search-0.2.2-dev.4.daemonset-to-dep.90f4cf1f.tgz  ds-search-0.2.2-dev.5.daemonset-to-dep.59fc0486.tgz  ds-search-0.2.2-dev.6.daemonset-to-dep.9e224f5a.tgz  ds-search-0.2.2-dev.7.daemonset-to-dep.25296d58.tgz  ds-search-0.2.2-dev.8.update-daemonset.c70c072b.tgz  index.yaml  server-0.0.1.tgz  server-0.1.0-dev.2.main.8441741b.tgz  server-0.1.0-dev.30.decentralized-se.bb1a3f3d.tgz  server-0.1.0-dev.31.feature-decentra.1f2016bf.tgz  server-0.1.0-dev.32.decentralized-se.c48d47da.tgz  server-0.1.0-dev.33.decentralized-se.a9d815a4.tgz  server-0.1.0-dev.33.feature-decentra.22b3fb6a.tgz  server-0.1.0-dev.34.develop.bafda952.tgz  server-0.1.0-dev.34.feature-decentra.1bf34fdd.tgz  server-0.1.0-dev.35.feature-monitori.312936c2.tgz  server-0.1.0-dev.36.develop.f37b4bf5.tgz  server-0.1.0-dev.36.feature-monitori.9b376992.tgz  server-0.1.0-dev.37.feature-ingress.4a3f062d.tgz  server-0.1.0-dev.38.feature-ingress.06edc0d0.tgz  server-0.1.0-dev.38.feature-ingress.d32cca89.tgz  server-0.1.0-dev.39.develop.162ab788.tgz  server-0.1.0-dev.39.feature-ingress.968cb3b9.tgz  server-0.1.0-dev.4.develop.dec7f0bc.tgz  server-0.1.0.tgz  (+35 more)
server/: .env  .env.template  Dockerfile  README.md  mypy.ini  pyproject.toml
server/app/: logging_config.py  main.py  settings.py
server/app/core/: discovery.py  entities.py  exceptions.py  namespace.py  usecases.py
server/app/core/tests/: factories.py  test_discovery.py  test_entities.py  test_usecases.py
server/app/rest_api/: depends.py  examples.py  response.py  serializers.py  tags.py
server/app/rest_api/routes/: health_check.py  search.py
server/app/rest_api/routes/tests/: helpers.py  test_health_check.py  test_search.py
server/charts/server/: Chart.yaml  values.yaml
server/charts/server/templates/: _helpers.tpl  cluster-role.yaml  daemonset.yaml  deployment.yaml  ingress.yaml  metrics-servicemonitor.yaml  node-services.yaml  role-binding.yaml  service.yaml
(+42 files in other folders)
