[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ds-search-service"
version = "0.2.0"
description = "The Search Service is a service of the Data Space Node, designed to process search queries and aggregate results from decentralized catalogs."
readme = "README.md"
authors = ["HIRO-MicroDataCenters <all-hiro@hiro-microdatacenters.nl>"]
license = "MIT"
repository = "https://github.com/HIRO-MicroDataCenters-BV/ds-search-service"
homepage = "https://github.com/HIRO-MicroDataCenters-BV/ds-search-service"
packages = [{include = "*", from="app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109"
uvicorn = "^0.26"
classy-fastapi = "^0.6.1"
prometheus-fastapi-instrumentator = "^6.1.0"
pyld = "^2.0.4"
rdflib = "^7.1.4"
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12"
flake8 = "^7.0"
isort = {extras = ["colors"], version = "^5.13"}
mypy = "^1.8"
mypy-extensions = "^1.0"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.12"
pre-commit = "^4.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.26.0"
httpx = "^0.26"
tox = "^4.13.0"

[tool.isort]
# https://github.com/timothycrosley/isort/
line_length = 88

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.black]
# https://github.com/psf/black
line-length = 88
color = true

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]
